--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "ci:lint": "npm run lint:prettier && npm run lint:lint",
         "ci:build": "ng build ppwcode",
         "ci:build-libs": "./scripts/ci/build-libs.sh",
+        "ci:check-production-vulnerabilities": "npx better-npm-audit audit --production",
         "retire": "retire --outputformat cyclonedx"
     },
     "private": true,
